--- a/complete_python_course_2023/courses_django_project/templates/base.html
+++ b/complete_python_course_2023/courses_django_project/templates/base.html
@@ -22,6 +22,20 @@
           class="navbar-brand">
           Courses Shop
         </a>
+        <span class="navbar-text">
+          <a
+          href="/admin/"
+          class="navbar-brand me-2" 
+          target="_blank">
+          Admin
+          </a>
+          <a
+            href="/api/v1/"
+            class="navbar-brand" 
+            target="_blank">
+            API
+          </a>
+        </span>
       </div>
     </nav>
     <main class="container">
